test/sema/lambda-capture-parameter.delta.output
lambda-capture-parameter.delta:6:28: error: lambda capturing not implemented yet
    var b = (int c) -> c + a + d;
                           ^
lambda-capture-parameter.delta:3:6: warning: unused declaration 'foo'
void foo(int a) {
     ^
